[package]
name = "jenny-ast"
version = "0.1.0"
edition = "2018"
resolver = "2"
authors = [
    "ech0riginal"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.15.0"
tracing = "*"

[dev-dependencies]
rust_decimal_macros = "1.15"